--- a/Safety1.sty
+++ b/Safety1.sty
@@ -44,7 +44,7 @@
     <Property name="PROP_BIT_SysConBitGen" value="Reset" time="0"/>
     <Property name="PROP_BIT_WaitStTimBitGen" value="5" time="0"/>
     <Property name="PROP_IOTIMING_AllSpeed" value="False" time="0"/>
-    <Property name="PROP_LST_AllowDUPMod" value="False" time="0"/>
+    <Property name="PROP_LST_AllowDUPMod" value="True" time="0"/>
     <Property name="PROP_LST_CarryChain" value="True" time="0"/>
     <Property name="PROP_LST_CarryChainLength" value="0" time="0"/>
     <Property name="PROP_LST_CmdLineArgs" value="" time="0"/>
@@ -53,7 +53,7 @@
     <Property name="PROP_LST_DecodeUnreachableStates" value="False" time="0"/>
     <Property name="PROP_LST_DisableDistRam" value="False" time="0"/>
     <Property name="PROP_LST_EBRUtil" value="100" time="0"/>
-    <Property name="PROP_LST_EdfFrequency" value="200" time="0"/>
+    <Property name="PROP_LST_EdfFrequency" value="50" time="0"/>
     <Property name="PROP_LST_EdfHardtimer" value="Enable" time="0"/>
     <Property name="PROP_LST_EdfInLibPath" value="" time="0"/>
     <Property name="PROP_LST_EdfInRemLoc" value="Off" time="0"/>
@@ -67,7 +67,7 @@
     <Property name="PROP_LST_MaxFanout" value="1000" time="0"/>
     <Property name="PROP_LST_MuxStyle" value="Auto" time="0"/>
     <Property name="PROP_LST_NumCriticalPaths" value="3" time="0"/>
-    <Property name="PROP_LST_OptimizeGoal" value="Balanced" time="0"/>
+    <Property name="PROP_LST_OptimizeGoal" value="Timing" time="0"/>
     <Property name="PROP_LST_PropagatConst" value="True" time="0"/>
     <Property name="PROP_LST_RAMStyle" value="Auto" time="0"/>
     <Property name="PROP_LST_ROMStyle" value="Auto" time="0"/>
@@ -94,12 +94,12 @@
     <Property name="PROP_MAP_MapModArgs" value="" time="0"/>
     <Property name="PROP_MAP_OvermapDevice" value="False" time="0"/>
     <Property name="PROP_MAP_PackLogMapDes" value="0" time="0"/>
-    <Property name="PROP_MAP_RegRetiming" value="False" time="0"/>
+    <Property name="PROP_MAP_RegRetiming" value="True" time="0"/>
     <Property name="PROP_MAP_SigCrossRef" value="False" time="0"/>
     <Property name="PROP_MAP_SymCrossRef" value="False" time="0"/>
-    <Property name="PROP_MAP_TimingDriven" value="False" time="0"/>
-    <Property name="PROP_MAP_TimingDrivenNodeRep" value="False" time="0"/>
-    <Property name="PROP_MAP_TimingDrivenPack" value="False" time="0"/>
+    <Property name="PROP_MAP_TimingDriven" value="True" time="0"/>
+    <Property name="PROP_MAP_TimingDrivenNodeRep" value="True" time="0"/>
+    <Property name="PROP_MAP_TimingDrivenPack" value="True" time="0"/>
     <Property name="PROP_PARSTA_AnalysisOption" value="Standard Setup and Hold Analysis" time="0"/>
     <Property name="PROP_PARSTA_AutoTiming" value="True" time="0"/>
     <Property name="PROP_PARSTA_CheckUnconstrainedConns" value="False" time="0"/>
@@ -116,7 +116,7 @@
     <Property name="PROP_PAR_EffortParDes" value="5" time="0"/>
     <Property name="PROP_PAR_MultiSeedSortMode" value="Worst Slack" time="0"/>
     <Property name="PROP_PAR_NewRouteParDes" value="NBR" time="0"/>
-    <Property name="PROP_PAR_PARClockSkew" value="Off" time="0"/>
+    <Property name="PROP_PAR_PARClockSkew" value="2 (recommended for On)" time="0"/>
     <Property name="PROP_PAR_PARModArgs" value="" time="0"/>
     <Property name="PROP_PAR_ParMultiNodeList" value="" time="0"/>
     <Property name="PROP_PAR_ParRunPlaceOnly" value="False" time="0"/>
@@ -168,12 +168,12 @@
     <Property name="PROP_SYN_ClockConversion" value="True" time="0"/>
     <Property name="PROP_SYN_CmdLineArgs" value="" time="0"/>
     <Property name="PROP_SYN_DisableRegisterRep" value="False" time="0"/>
-    <Property name="PROP_SYN_EdfAllowDUPMod" value="False" time="0"/>
+    <Property name="PROP_SYN_EdfAllowDUPMod" value="True" time="0"/>
     <Property name="PROP_SYN_EdfArea" value="False" time="0"/>
     <Property name="PROP_SYN_EdfArrangeVHDLFiles" value="True" time="0"/>
     <Property name="PROP_SYN_EdfDefEnumEncode" value="Default" time="0"/>
     <Property name="PROP_SYN_EdfFanout" value="1000" time="0"/>
-    <Property name="PROP_SYN_EdfFrequency" value="100" time="0"/>
+    <Property name="PROP_SYN_EdfFrequency" value="50" time="0"/>
     <Property name="PROP_SYN_EdfGSR" value="False" time="0"/>
     <Property name="PROP_SYN_EdfInsertIO" value="False" time="0"/>
     <Property name="PROP_SYN_EdfNumCritPath" value="" time="0"/>
@@ -181,7 +181,7 @@
     <Property name="PROP_SYN_EdfOutNetForm" value="None" time="0"/>
     <Property name="PROP_SYN_EdfPushTirstates" value="True" time="0"/>
     <Property name="PROP_SYN_EdfResSharing" value="True" time="0"/>
-    <Property name="PROP_SYN_EdfRunRetiming" value="Pipelining Only" time="0"/>
+    <Property name="PROP_SYN_EdfRunRetiming" value="Pipelining and Retiming" time="0"/>
     <Property name="PROP_SYN_EdfSymFSM" value="True" time="0"/>
     <Property name="PROP_SYN_EdfUnconsClk" value="False" time="0"/>
     <Property name="PROP_SYN_EdfVerilogInput" value="Verilog 2001" time="0"/>
